projectiles fly correctly and different projectile types